# lafetl_py

./: README.md  pyproject.toml  test.py
laftel/: __init__.py  api.py
laftel/models/: __init__.py  air_time.py  anime.py  base.py  enums.py  image.py  meta.py  person.py  production.py  rating.py  tag.py  validators.py
laftel/utils/: deprecate.py
